--- a/index.html
+++ b/index.html
@@ -22,77 +22,74 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Lens</h1>
-						<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+						<h1>walibi</h1>
+						<p>walibi万圣节 哈啤</p>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="images/fulls/wechat.jpeg" class="icon fa-wechat"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/woshisbb43" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
 					</header>
 
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<a class="thumbnail" href="images/fulls/01.jpeg" data-position="left center"><img src="images/thumbs/01.jpeg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+							<a class="thumbnail" href="images/fulls/02.jpeg"><img src="images/thumbs/02.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<a class="thumbnail" href="images/fulls/03.jpeg" data-position="top center"><img src="images/thumbs/03.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+							<a class="thumbnail" href="images/fulls/04.jpeg"><img src="images/thumbs/04.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<a class="thumbnail" href="images/fulls/05.jpeg" data-position="top center"><img src="images/thumbs/05.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<a class="thumbnail" href="images/fulls/06.jpeg"><img src="images/thumbs/06.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+							<a class="thumbnail" href="images/fulls/07.jpeg"><img src="images/thumbs/07.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+							<a class="thumbnail" href="images/fulls/08.jpeg"><img src="images/thumbs/08.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+							<a class="thumbnail" href="images/fulls/09.jpeg"><img src="images/thumbs/09.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+							<a class="thumbnail" href="images/fulls/10.jpeg"><img src="images/thumbs/10.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
+							<a class="thumbnail" href="images/fulls/11.jpeg"><img src="images/thumbs/11.jpeg" alt="" /></a>
+
+
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+							<a class="thumbnail" href="images/fulls/12.jpeg"><img src="images/thumbs/12.jpeg" alt="" /></a>
+
+
 						</article>
 					</section>
 
