--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lens by HTML5 UP</title>
+		<title>walibi 看中医</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,7 +23,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>walibi</h1>
-						<p>walibi万圣节 哈啤</p>
+						<p>walibi万圣节 happy</p>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="images/fulls/wechat.jpeg" class="icon fa-wechat"><span class="label">Instagram</span></a></li>
